--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>CineMatchWebApp</title>
+  <title>CineMatch</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/jpeg" href="assets/imgs/CineMatch_logo.ico">
+  <link rel="apple-touch-icon" href="assets/imgs/CineMatch_logo.JPG">
 </head>
 <body>
   <app-root></app-root>
