--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/jpeg" href="assets/imgs/CineMatch_logo.ico">
   <link rel="apple-touch-icon" href="assets/imgs/CineMatch_logo.JPG">
+  <!-- reCAPTCHA v3 standard script -->
+   <script>
+     // reCAPTCHA v3 standard script injected dynamically from main.ts using recaptchaSiteKey
+   </script>
 </head>
 <body>
   <app-root></app-root>
